# hypernode-llm-deployer

./: .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVNET_DEPLOYMENT.md  GAS_OPTIMIZATION.md  Makefile  PORT_ALLOCATION.md  README.md  X402_INTEGRATION.md  docker-compose.yml  fix-cargo-lock.sh  package.json  tsconfig.json
.cargo/: config
.github/workfows/: build-programs.yml  ci  deploy-devnet.yml
examples/tutorials/: QUICK_START.md
governance-ui/: README.md  package.json
governance-ui/src/: App.tsx
governance-ui/src/components/: Dashboard.tsx  ProposalCard.tsx  ProposalList.tsx
hypernode-app/: .env.example  DEPLOYMENT.md  DEPRECATED.md  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  X402_PRODUCTION.md  X402_README.md  jest.config.js  jest.setup.js  package.json
hypernode-app/__tests__/x402/: adapter.test.ts  verifier.test.ts
hypernode-app/examples/: x402-example.ts  x402-python-example.py
hypernode-app/src/app/: globals.css  layout.tsx  page.tsx
hypernode-app/src/app/dashboard/: page.tsx
hypernode-app/src/app/governance/: page.tsx
hypernode-app/src/app/marketplace/: page.tsx
hypernode-app/src/components/: Footer.tsx  Header.tsx  QueryProvider.tsx  WalletProvider.tsx
hypernode-app/src/hooks/: useHypernodeSDK.ts
hypernode-app/src/lib/: config.ts  utils.ts
hypernode-app/src/types/: index.ts
offchain/: .env.example  README.md  facilitator-adapter.ts  index.ts  package.json  tsconfig.json
offchain/oracle/: index.ts  oracle.js
offchain/routes/: facilitator.ts
offchain/x402/: x402-solana-adapter.js  x402.js
programs/hypernode-facilitator/: Cargo.toml  README.md
programs/hypernode-facilitator/src/: errors.rs  lib.rs
programs/hypernode-facilitator/src/instructions/: claim.rs  create_intent.rs  mod.rs  refund.rs  verify_payment.rs
programs/hypernode-facilitator/src/state/: mod.rs  payment_intent.rs
programs/hypernode-governance/: Cargo.toml  README.md
programs/hypernode-governance/src/: errors.rs  lib.rs  state.rs
programs/hypernode-governance/src/instructions/: cancel_proposal.rs  create_proposal.rs  execute_proposal.rs  mod.rs  vote.rs
programs/hypernode-jobs/: Cargo.toml
programs/hypernode-jobs/src/: errors.rs  lib.rs
programs/hypernode-jobs/src/instructions/: finish.rs  initialize_market.rs  mod.rs  recover.rs  submit_job.rs  work.rs
programs/hypernode-jobs/src/state/: job.rs  market.rs  mod.rs
programs/hypernode-markets/: Cargo.toml  README.md
programs/hypernode-markets/src/: errors.rs  lib.rs
programs/hypernode-markets/src/instructions/: cancel_job.rs  create_job.rs  create_market.rs  finish_job.rs  list_node.rs  mod.rs  timeout_job.rs  update_reputation.rs  work_job.rs
programs/hypernode-markets/src/state/: job.rs  market.rs  mod.rs  reputation.rs
programs/hypernode-nodes/: Cargo.toml
programs/hypernode-nodes/src/: lib.rs
programs/hypernode-nodes/src/instructions/: check_health.rs  heartbeat.rs  mod.rs  register.rs  update.rs
programs/hypernode-nodes/src/state/: node.rs
programs/hypernode-rewards/: Cargo.toml  README.md
programs/hypernode-rewards/src/: errors.rs  lib.rs  state.rs
programs/hypernode-slashing/: Cargo.toml  README.md
programs/hypernode-slashing/src/: errors.rs  lib.rs  state.rs
programs/hypernode-slashing/src/instructions/: mod.rs  report_fraud.rs  slash_node.rs
programs/hypernode-staking/: Cargo.toml  README.md
programs/hypernode-staking/src/: constants.rs  errors.rs  events.rs  lib.rs  math.rs  state.rs  validation.rs
programs/hypernode-staking/src/instructions/: mod.rs  stake.rs  unstake.rs  withdraw.rs
scripts/: deploy-programs.sh  run-tests.sh  setup-dev.sh
sdk/: README.md  package.json  tsconfig.json
sdk/examples/: cancel-timeout.ts  create-job.ts  devnet-quickstart.ts  monitor-market.ts
sdk/idl/: hypernode_markets.json  hypernode_rewards.json  hypernode_staking.json
sdk/src/: FacilitatorClient.ts  HypernodeSDK.ts  JobClient.ts  MarketClient.ts  RewardsClient.ts  StakingClient.ts  config.ts  index.ts  types.ts  utils.ts
templates/huggingface/: Dockerfile  README.md  app.py  requirements.txt
templates/pytorch/: Dockerfile  README.md  app.py  requirements.txt
templates/stable-diffusion/: Dockerfile  README.md  app.py  requirements.txt
tests/: devnet-basic-test.js  devnet-instructions-test.js  devnet-verify.js  devnet-verify.ts  hypernode-markets.ts  hypernode-rewards.ts  hypernode-staking.ts  integration.ts
worker/: README.md  package.json
worker/src/: NodeManager.ts  config.ts  index.ts
worker/src/handlers/: HealthHandler.ts  JobHandler.ts  ReputationHandler.ts  SpecsHandler.ts
worker/src/providers/: DockerProvider.ts
worker/src/solana/: SolanaClient.ts
worker/src/types/: index.ts
(+28 files in other folders)
