[workspace]
members = [
    "programs/hypernode-markets",
    "programs/hypernode-staking",
    "programs/hypernode-rewards",
    "programs/hypernode-slashing",
    "programs/hypernode-governance",
    "programs/hypernode-jobs",
    "programs/hypernode-nodes",
]
resolver = "2"

[workspace.metadata.cargo-lock]
version = 2

[workspace.dependencies]
borsh = "=0.10.4"
solana-program = "=1.18.26"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
