[package]
name = "hypernode-facilitator"
version = "0.1.0"
description = "x402 Payment Protocol on-chain facilitator for Hypernode"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hypernode_facilitator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
