[package]
name = "hypernode-jobs"
version = "0.1.0"
description = "Hypernode Jobs - Job lifecycle management with dynamic queue system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hypernode_jobs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
