[package]
name = "hypernode-nodes"
version = "0.1.0"
description = "Hypernode Node Registry - Node registration and hardware specs tracking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hypernode_nodes"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
