[package]
name = "hypernode-slashing"
version = "0.1.0"
description = "Hypernode slashing program for malicious node penalties"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hypernode_slashing"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
hypernode-staking = { path = "../hypernode-staking", features = ["cpi"] }
